--- a/styles/style.css
+++ b/styles/style.css
@@ -72,10 +72,11 @@ header {
 
 .principal {
   width: 100%;
-  height: max-content;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 .principal .principal__contenedorH1 {
@@ -96,6 +97,10 @@ header {
   padding: 0 0 0 60px;
 }
 
+.principal .carouselContainer .imgMobile {
+  display: none;
+}
+
 .nosotros {
   height: 100vh;
   background-image: url(../multimedia/images/nosotros/camara.jpg);
@@ -105,6 +110,17 @@ header {
 
 .nosotros .cuadroAmarillo {
   background-color: #f8cd0d;
+  width: 50%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.nosotros .cuadroAmarillo .cuadroAmarillo__texto {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .nosotros .cuadroAmarillo__img {
@@ -113,7 +129,7 @@ header {
 
 .portfolio {
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -121,7 +137,7 @@ header {
 
 .portfolio .portfolio__titulo {
   color: #19282F;
-  padding-left: 0.8em;
+  padding-left: 0.5em;
   font-size: 70px;
   text-transform: uppercase;
   display: flex;
@@ -152,7 +168,7 @@ header {
 
 .portfolio .portfolio__contenedor__cajas .portfolio__cajaXV {
   width: 45%;
-  height: 90%;
+  height: 100%;
   border-radius: 10px;
   background-image: url(../multimedia/images/caja15años.jpg);
   background-size: cover;
@@ -189,7 +205,7 @@ header {
 
 .portfolio .portfolio__contenedor__cajas .portfolio__cajaBodas {
   width: 45%;
-  height: 90%;
+  height: 100%;
   border-radius: 10px;
   background-image: url(../multimedia/images/cajaBodas.jpg);
   background-size: cover;
@@ -415,7 +431,7 @@ header {
 
 .servicios .servicios__titulo, .servicios .servicios__lens {
   width: 90%;
-  margin-bottom: 1.1em;
+  margin: 1.1em;
   color: #f8cd0d;
   text-transform: uppercase;
   font-size: 3em;
@@ -435,7 +451,7 @@ header {
 .servicios .carouselContainer {
   width: 50%;
   height: 50vh;
-  border: #f8cd0d solid 5px;
+  border: #f8cd0d solid 3px;
   display: flex;
   justify-content: center;
 }
@@ -460,9 +476,10 @@ header {
 }
 
 .contacto {
-  height: max-content;
+  height: 100vh;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .contacto .contacto__contenedor {
@@ -572,7 +589,7 @@ header {
   transition: all 0.4s;
 }
 
-@media only screen and (min-width: 320px) and (max-width: 500px) {
+@media screen and (min-width: 320px) and (max-width: 500px) {
   html, body {
     max-width: 100%;
     overflow-x: hidden;
@@ -602,7 +619,7 @@ header {
   }
   .principal {
     width: 100%;
-    height: max-content;
+    height: 100vh;
     padding-top: 2em;
   }
   .principal .principal__contenedorH1 .principal__h1 {
@@ -612,15 +629,18 @@ header {
     font-size: 2em;
     padding-left: 0;
   }
-  .carousel-indicators {
+  .principal .carouselContainer .imgLaptopSize {
     display: none;
   }
-  .carousel-icon {
-    display: none;
+  .principal .carouselContainer .imgMobile {
+    display: block;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
   }
   .nosotros {
     width: 100%;
-    height: max-content;
+    height: 100vh;
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -633,6 +653,8 @@ header {
   .nosotros .cuadroAmarillo .cuadroAmarillo__img {
     display: block;
     width: 100%;
+    height: 100vh;
+    object-fit: cover;
     z-index: 1;
   }
   .nosotros .cuadroAmarillo .cuadroAmarillo__texto {
@@ -640,26 +662,28 @@ header {
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     z-index: 2;
     position: absolute;
-    background-color: #f2dd1f8a;
+    background-color: #f8cd0d8a;
   }
-  .nosotros .cuadroAmarillo .cuadroAmarillo__texto #nos {
-    font-size: large;
-    width: max-content;
+  .nosotros .cuadroAmarillo .cuadroAmarillo__texto .nosotros__titulo {
+    font-size: 3em;
+    text-transform: uppercase;
+    width: 100%;
+    text-align: center;
   }
   .nosotros .cuadroAmarillo .cuadroAmarillo__texto .cuadroAmarillo__contenedorParrafo {
     margin-top: 2px !important;
     width: 80%;
   }
   .nosotros .cuadroAmarillo .cuadroAmarillo__texto .cuadroAmarillo__contenedorParrafo .cuadroAmarillo__parrafo {
-    font-size: 10px;
+    font-size: 1.2em;
   }
   .portfolio {
     width: 100%;
-    height: 80vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
