--- a/styles/style.scss
+++ b/styles/style.scss
@@ -88,11 +88,6 @@ header{
             padding: 0 0 0 60px ;
         }
     }
-    .carouselContainer{
-        .imgMobile{
-            display: none;
-        }
-    }
 }
 // seccion nosotros 
 .nosotros{
@@ -539,7 +534,7 @@ header{
     }
 }
 // medias queries
-@media screen and (min-width: 320px) and (max-width: 500px){
+@media only screen and (min-width: 320px) and (max-width: 500px){
     html, body {
         max-width:100% ;
         overflow-x: hidden;
@@ -581,14 +576,19 @@ header{
             }
         }
         .carouselContainer{
-            .imgLaptopSize{
-                display: none;
-            }
-            .imgMobile{
-                display: block;
+            .carousel__img{
                 width: 100%;
                 height: 100vh;
                 object-fit: cover;
+            }
+            .carousel__img1{
+                object-position:30%;
+            }
+            .carousel__img2{
+                object-position:60%;
+            }
+            .carousel__img3{
+                object-position:70%;
             }
         }
     }
@@ -924,6 +924,7 @@ header{
         width: 100%;
         .contacto__contenedor{
             width: 100%;
+            height: 100vh;
             padding: 1em;
             border-radius: 10px;
             display: flex;
@@ -986,7 +987,7 @@ header{
     .footer{
         background-color: $submenu-color-font;
         width: 100%;
-        height: 30vh;
+        height: 20vh;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -995,7 +996,7 @@ header{
             margin-bottom: 1.5em;
             font-weight: lighter;
             text-transform: uppercase;
-            font-size: 2em;
+            font-size: 1.5em;
             text-align: center;
         }
         .footer__redes{
