--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,7 @@ html {
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 .body__galeria--bgDark {
@@ -615,7 +616,7 @@ header {
   }
   .principal {
     width: 100%;
-    height: 100vh;
+    height: 40rem;
     padding-top: 2em;
   }
   .principal .principal__contenedorH1 .principal__h1 {
@@ -627,7 +628,7 @@ header {
   }
   .principal .carouselContainer .carousel__img {
     width: 100%;
-    height: 100vh;
+    height: 40rem;
     object-fit: cover;
   }
   .principal .carouselContainer .carousel__img1 {
@@ -641,7 +642,7 @@ header {
   }
   .nosotros {
     width: 100%;
-    height: 100vh;
+    height: 40rem;
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -654,7 +655,7 @@ header {
   .nosotros .cuadroAmarillo .cuadroAmarillo__img {
     display: block;
     width: 100%;
-    height: 100vh;
+    height: 40rem;
     object-fit: cover;
     z-index: 1;
   }
@@ -684,7 +685,7 @@ header {
   }
   .portfolio {
     width: 100%;
-    height: 100vh;
+    height: 40rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -744,6 +745,7 @@ header {
   .portfolio .portfolio__contenedor__cajas .portfolio__cajaBodas {
     width: 90%;
     height: 50%;
+    border-radius: 10px;
     background-image: url(../multimedia/images/cajaBodas.jpg);
     background-size: cover;
     background-position-y: -5em;
@@ -932,7 +934,7 @@ header {
     background-size: cover;
   }
   .servicios {
-    height: 100vh;
+    height: 40rem;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -950,12 +952,12 @@ header {
     font-size: 2em;
   }
   .contacto {
-    height: 100vh;
+    height: 50rem;
     width: 100%;
   }
   .contacto .contacto__contenedor {
     width: 100%;
-    height: 100vh;
+    height: 40rem;
     padding: 1em;
     border-radius: 10px;
     display: flex;
@@ -1016,7 +1018,7 @@ header {
   .footer {
     background-color: white;
     width: 100%;
-    height: 20vh;
+    height: 8rem;
     display: flex;
     flex-direction: column;
     align-items: center;
