--- a/styles/style.scss
+++ b/styles/style.scss
@@ -16,6 +16,7 @@ html{
 *{
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 .body__galeria--bgDark{
     background: $section-color;
@@ -31,14 +32,12 @@ header{
 .navbar-nav{
     margin-left: auto;
 }
-
 .boton__portfolio{
     color: $menu-color-font;
 }
 .boton__portfolio:hover{
     color: $submenu-color-font;
     display: block;
-    
 }
 .dropdown-menu{
     background-color: $submenu-color;
@@ -536,7 +535,7 @@ header{
 // medias queries
 @media only screen and (min-width: 320px) and (max-width: 500px){
     html, body {
-        max-width:100% ;
+        max-width:100%;
         overflow-x: hidden;
     }
     header{   
@@ -564,7 +563,7 @@ header{
     }
     .principal{
         width: 100%;
-        height: 100vh;
+        height: 40rem;
         padding-top: 2em;
         .principal__contenedorH1{
             .principal__h1 {
@@ -578,7 +577,7 @@ header{
         .carouselContainer{
             .carousel__img{
                 width: 100%;
-                height: 100vh;
+                height: 40rem;
                 object-fit: cover;
             }
             .carousel__img1{
@@ -595,7 +594,7 @@ header{
     // nosotros con sass
     .nosotros{
         width: 100%;
-        height:100vh;
+        height:40rem;
         background-size: cover;
         display: flex;
         flex-direction: column;
@@ -606,7 +605,7 @@ header{
             .cuadroAmarillo__img{
                 display: block;
                 width: 100%;
-                height: 100vh;
+                height: 40rem;
                 object-fit: cover;
                 z-index: 1;
             }
@@ -638,7 +637,7 @@ header{
     }
     .portfolio{
         width: 100%;
-        height: 100vh;
+        height: 40rem;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -706,7 +705,7 @@ header{
             .portfolio__cajaBodas{
                 width: 90%;
                 height: 50%;
-                // border-radius: 10px;
+                border-radius: 10px;
                 background-image: url(../multimedia/images/cajaBodas.jpg);
                 background-size: cover;
                 background-position-y: -5em;
@@ -901,7 +900,7 @@ header{
         }
     }
     .servicios{
-        height: 100vh;
+        height: 40rem;
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -920,11 +919,11 @@ header{
     }
         // SECCION CONTACTO
     .contacto{
-        height: 100vh;
+        height: 50rem;
         width: 100%;
         .contacto__contenedor{
             width: 100%;
-            height: 100vh;
+            height: 40rem;
             padding: 1em;
             border-radius: 10px;
             display: flex;
@@ -987,7 +986,7 @@ header{
     .footer{
         background-color: $submenu-color-font;
         width: 100%;
-        height: 20vh;
+        height: 8rem;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -1017,6 +1016,7 @@ header{
         }
     }
 }
+
 @media (min-width: 720px) and (max-width: 850px){
     // main con sass
     .principal{
