--- a/styles/style.scss
+++ b/styles/style.scss
@@ -56,19 +56,18 @@ header{
     }
 }
 .sec{
-    width: 100%;
+    // width: 100%;
     background-color: $section-color;
-    height: max-content;
+    // height: max-content;
     
 }
 // main con sass
 .principal{
     width: 100%;
-    height:100vh;
+    height:55rem;
     display: flex;
     align-items:center;
     justify-content: center;
-    // margin-top: 0.2em;
     overflow: hidden;
     .principal__contenedorH1{
         width:max-content;
@@ -90,7 +89,8 @@ header{
 }
 // seccion nosotros 
 .nosotros{
-    height: 100vh;
+    width: 100%;
+    height: 55rem;
     background-image: url(../multimedia/images/nosotros/camara.jpg);
     background-size: cover;
     display: flex;
@@ -114,7 +114,7 @@ header{
 // seccion portfolio
 .portfolio{
     width: 100%;
-    height: 90vh ;
+    height: 55rem ;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -383,7 +383,7 @@ header{
 }
 // SECCION SERVICIOS//
 .servicios{
-    height: 100vh;
+    height: 55rem;
     border-top: $submenu-color 2px solid;
     border-bottom: $submenu-color 2px solid;
     display: flex;
@@ -438,7 +438,7 @@ header{
 }
 // SECCION CONTACTO
 .contacto{
-    height: 100vh;
+    height: 44rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -506,7 +506,7 @@ header{
 .footer{
     background-color:$submenu-color-font;
     width: 100%;
-    height: 30vh;
+    height: 14rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -533,6 +533,7 @@ header{
     }
 }
 // medias queries
+// mobile
 @media only screen and (min-width: 320px) and (max-width: 500px){
     html, body {
         max-width:100%;
@@ -1016,8 +1017,8 @@ header{
         }
     }
 }
-
-@media (min-width: 720px) and (max-width: 850px){
+// tablet
+@media only screen and (min-width: 500px) and (max-width: 850px){
     // main con sass
     .principal{
         height:max-content;
@@ -1028,5 +1029,26 @@ header{
         background-image: url(../multimedia/images/nosotros/camara.jpg);
         background-size: cover;
         background-position: -15em;
+    }
+}
+// notebooks
+@media only screen and (min-width:850px) and (max-width:1400px){
+    .principal{
+        height: 35rem;
+    }
+    .nosotros{
+        height: 35rem;
+    }
+    .portfolio{
+        height: 35rem;
+    }
+    .servicios{
+        height: 35rem;
+    }
+    .contacto{
+        height: 35rem;
+    }
+    .footer{
+        height: 9rem;
     }
 }
