agregue responsive para tablet

--- a/styles/style.css
+++ b/styles/style.css
@@ -615,7 +615,7 @@ header {
   }
   .principal {
     width: 100%;
-    height: 40rem;
+    height: 100vh;
     padding-top: 2em;
   }
   .principal .principal__contenedorH1 .principal__h1 {
@@ -627,7 +627,7 @@ header {
   }
   .principal .carouselContainer .carousel__img {
     width: 100%;
-    height: 40rem;
+    height: 100vh;
     object-fit: cover;
   }
   .principal .carouselContainer .carousel__img1 {
@@ -1049,15 +1049,465 @@ header {
 }
 
 @media only screen and (min-width: 500px) and (max-width: 850px) {
+  html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+  }
+  header {
+    width: 100%;
+    height: auto;
+    background-color: #114358;
+    z-index: 4;
+    position: fixed;
+  }
+  header .navbar {
+    display: flex;
+    justify-content: start;
+  }
+  header .navbar .logoContainer {
+    width: 50%;
+  }
+  header .navbar .logoContainer .logo {
+    width: 100%;
+  }
+  header .navbar .dropdown-menu {
+    background-color: #0c2f3d;
+  }
+  header .navbar .dropdown-menu .dropdown-item {
+    color: white;
+  }
   .principal {
-    height: max-content;
-    z-index: 2;
+    width: 100%;
+    height: 100vh;
+    padding-top: 2em;
+  }
+  .principal .principal__contenedorH1 .principal__h1 {
+    font-family: 'Gilda Display', serif;
+    letter-spacing: 0.5em;
+    color: #ffffff;
+    font-size: 2em;
+    padding-left: 0;
+  }
+  .principal .carouselContainer .carousel__img {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+  }
+  .principal .carouselContainer .carousel__img1 {
+    object-position: 30%;
+  }
+  .principal .carouselContainer .carousel__img2 {
+    object-position: 60%;
+  }
+  .principal .carouselContainer .carousel__img3 {
+    object-position: 70%;
   }
   .nosotros {
-    height: 80vh;
-    background-image: url(../multimedia/images/nosotros/camara.jpg);
+    width: 100%;
+    height: 40rem;
     background-size: cover;
-    background-position: -15em;
+    display: flex;
+    flex-direction: column;
+  }
+  .nosotros .cuadroAmarillo {
+    width: 100% !important;
+    display: flex;
+    justify-content: center;
+  }
+  .nosotros .cuadroAmarillo .cuadroAmarillo__img {
+    display: block;
+    width: 100%;
+    height: 40rem;
+    object-fit: cover;
+    z-index: 1;
+  }
+  .nosotros .cuadroAmarillo .cuadroAmarillo__texto {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    z-index: 2;
+    position: absolute;
+    background-color: #f8cd0d8a;
+  }
+  .nosotros .cuadroAmarillo .cuadroAmarillo__texto .nosotros__titulo {
+    font-size: 3em;
+    text-transform: uppercase;
+    width: 100%;
+    text-align: center;
+  }
+  .nosotros .cuadroAmarillo .cuadroAmarillo__texto .cuadroAmarillo__contenedorParrafo {
+    margin-top: 2px !important;
+    width: 80%;
+  }
+  .nosotros .cuadroAmarillo .cuadroAmarillo__texto .cuadroAmarillo__contenedorParrafo .cuadroAmarillo__parrafo {
+    font-size: 1.2em;
+  }
+  .portfolio {
+    width: 100%;
+    height: 40rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .portfolio .portfolio__titulo {
+    height: auto;
+    width: 100%;
+    background-color: #D3ECA7;
+    font-size: 3em;
+    text-transform: uppercase;
+    padding: 0 0 0 0;
+    text-align: center;
+  }
+  .portfolio .portfolio__titulo .span__portfolio {
+    display: none;
+  }
+  .portfolio .portfolio__titulo .portfolio__titulo--media {
+    display: block;
+  }
+  .portfolio .portfolio__contenedor__cajas {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+  }
+  .portfolio .portfolio__contenedor__cajas .portfolio__cajaXV {
+    width: 90%;
+    height: 90%;
+    border-radius: 10px;
+    background-image: url(../multimedia/images/caja15años.jpg);
+    background-size: cover;
+    background-position-y: -4.5em;
+  }
+  .portfolio .portfolio__contenedor__cajas .portfolio__cajaXV:active {
+    transition: all 1s;
+  }
+  .portfolio .portfolio__contenedor__cajas .portfolio__cajaXV .portfolio__linkXV .textoXVaños {
+    display: none;
+  }
+  .portfolio .portfolio__contenedor__cajas .portfolio__cajaXV:hover .portfolio__linkXV {
+    transition: all 0.9s;
+    height: 100%;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  .portfolio .portfolio__contenedor__cajas .portfolio__cajaXV:hover .portfolio__linkXV .textoXVaños {
+    display: block;
+    color: antiquewhite;
+    font-size: 30px;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    margin-left: 0.2em;
+  }
+  .portfolio .portfolio__contenedor__cajas .portfolio__cajaBodas {
+    width: 90%;
+    height: 90%;
+    border-radius: 10px;
+    background-image: url(../multimedia/images/cajaBodas.jpg);
+    background-size: cover;
+    background-position-y: -5em;
+  }
+  .portfolio .portfolio__contenedor__cajas .portfolio__cajaBodas:active {
+    transform: scale(1.05);
+    transition: all 1s;
+  }
+  .portfolio .portfolio__contenedor__cajas .portfolio__cajaBodas .portfolio__linkBodas .textoBodas {
+    display: none;
+  }
+  .portfolio .portfolio__contenedor__cajas .portfolio__cajaBodas:hover .portfolio__linkBodas {
+    transition: all 0.9s;
+    height: 100%;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  .portfolio .portfolio__contenedor__cajas .portfolio__cajaBodas:hover .portfolio__linkBodas .textoBodas {
+    display: block;
+    color: antiquewhite;
+    font-size: 30px;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+  }
+  /* GALERIA */
+  .galeria__contenedor__titulo {
+    width: 100%;
+    height: 10em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .galeria__contenedor__titulo .galeria__titulo {
+    color: #D3ECA7;
+    font-size: 2.5em;
+    font-family: 'Gilda Display', serif;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    padding-top: 1em;
+  }
+  .galeria {
+    width: 100%;
+    height: max-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 0 2em 0;
+    /* GALERIA BODAS */
+  }
+  .galeria .contenedorImgXV {
+    width: 90%;
+    height: auto;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(15, 12em);
+    text-align: center;
+    gap: 10px;
+  }
+  .galeria .contenedorImgXV :hover {
+    transform: scale(1.05);
+    transition: all 0.8s;
+  }
+  .galeria .contenedorImgXV .imgXV1 {
+    grid-column: 1/2;
+    grid-row: 1/3;
+    background-image: url(../multimedia/images/galeria/XVaños/vertical-1.jpg);
+    background-size: cover;
+    background-position-y: -40px;
+  }
+  .galeria .contenedorImgXV .imgXV2 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    background-image: url(../multimedia/images/galeria/XVaños/horizontal-11.jpg);
+    background-size: cover;
+    background-position: bottom;
+  }
+  .galeria .contenedorImgXV .imgXV3 {
+    grid-column: 1/2;
+    grid-row: 4/7;
+    background-image: url(../multimedia/images/galeria/XVaños/vertical-2.jpg);
+    background-size: cover;
+    background-position: center;
+  }
+  .galeria .contenedorImgXV .imgXV4 {
+    grid-column: 1/2;
+    grid-row: 7/8;
+    background-image: url(../multimedia/images/galeria/XVaños/horizontal-2.jpg);
+    background-size: cover;
+  }
+  .galeria .contenedorImgXV .imgXV5 {
+    grid-column: 1/2;
+    grid-row: 8/11;
+    background-image: url(../multimedia/images/galeria/XVaños/vertical-3.jpg);
+    background-size: cover;
+  }
+  .galeria .contenedorImgXV .imgXV6 {
+    grid-column: 1/2;
+    grid-row: 11/13;
+    background-image: url(../multimedia/images/galeria/XVaños/vertical-12.jpg);
+    background-size: cover;
+    background-position-y: -5em;
+  }
+  .galeria .contenedorImgXV .imgXV7 {
+    grid-column: 1/2;
+    grid-row: 13/14;
+    background-image: url(../multimedia/images/galeria/XVaños/horizontal-9.jpg);
+    background-size: cover;
+    background-position: center;
+  }
+  .galeria .contenedorImgXV .imgXV8 {
+    grid-column: 1/2;
+    grid-row: 14/16;
+    background-image: url(../multimedia/images/galeria/XVaños/horizontal-1.jpg);
+    background-size: cover;
+    background-position-y: center;
+    background-position-x: center;
+  }
+  .galeria .contenedorImgB {
+    width: 95%;
+    height: auto;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(8, 15em);
+    text-align: center;
+    gap: 10px;
+  }
+  .galeria .contenedorImgB :hover {
+    transform: scale(1.05);
+    transition: all 0.8s;
+  }
+  .galeria .contenedorImgB .imgB1 {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    background-image: url(../multimedia/images/galeria/bodas/boda-1.jpg);
+    background-size: cover;
+    background-position: center;
+  }
+  .galeria .contenedorImgB .imgB2 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    background-image: url(../multimedia/images/galeria/bodas/boda-2.jpg);
+    background-size: cover;
+    background-position-y: center;
+  }
+  .galeria .contenedorImgB .imgB3 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    background-image: url(../multimedia/images/galeria/bodas/boda-3.jpg);
+    background-size: cover;
+    background-position-y: center;
+  }
+  .galeria .contenedorImgB .imgB4 {
+    grid-column: 1/2;
+    grid-row: 4/5;
+    background-image: url(../multimedia/images/galeria/bodas/boda-4.jpg);
+    background-size: cover;
+    background-position-y: center;
+  }
+  .galeria .contenedorImgB .imgB5 {
+    grid-column: 1/2;
+    grid-row: 5/6;
+    background-image: url(../multimedia/images/galeria/bodas/boda-5.jpg);
+    background-size: cover;
+  }
+  .galeria .contenedorImgB .imgB6 {
+    grid-column: 1/2;
+    grid-row: 6/7;
+    background-image: url(../multimedia/images/galeria/bodas/boda-6.jpg);
+    background-size: cover;
+    background-position-y: center;
+  }
+  .galeria .contenedorImgB .imgB7 {
+    grid-column: 1/2;
+    grid-row: 7/8;
+    background-image: url(../multimedia/images/galeria/bodas/boda-7.jpg);
+    background-size: cover;
+    background-position-y: center;
+  }
+  .galeria .contenedorImgB .imgB8 {
+    grid-column: 1/2;
+    grid-row: 8/9;
+    background-image: url(../multimedia/images/galeria/bodas/boda-8.jpg);
+    background-size: cover;
+  }
+  .servicios {
+    height: 40rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  .servicios .servicios__titulo, .servicios .servicios__lens {
+    width: 100%;
+    font-size: 3em;
+    letter-spacing: normal;
+  }
+  .servicios .carouselContainer {
+    width: 90%;
+    height: 50%;
+  }
+  .servicios .servicios__lens {
+    font-size: 2em;
+  }
+  .contacto {
+    height: 50rem;
+    width: 100%;
+  }
+  .contacto .contacto__contenedor {
+    width: 100%;
+    height: 40rem;
+    padding: 1em;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .contacto .contacto__contenedor .contacto__contenedor__titulo {
+    display: flex;
+    justify-content: center;
+  }
+  .contacto .contacto__contenedor .contacto__contenedor__titulo .contacto__titulo {
+    color: #114358;
+    margin-bottom: 40px;
+    font-size: 3em;
+    text-transform: uppercase;
+    letter-spacing: normal;
+  }
+  .contacto .contacto__contenedor .contacto__form {
+    border: none;
+  }
+  .contacto .contacto__contenedor .contacto__form .contacto__form__bloque {
+    padding: 20px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  .contacto .contacto__contenedor .contacto__form .contacto__form__bloque .contacto__bloque__inputs {
+    width: 100%;
+  }
+  .contacto .contacto__contenedor .contacto__form .contacto__form__bloque .contacto__bloque__inputs .contacto__form__div {
+    background-color: #0c2f3d;
+    color: white;
+  }
+  .contacto .contacto__contenedor .contacto__form .contacto__form__bloque .contacto__form__textarea {
+    width: 100%;
+    height: 14em;
+    margin-left: 0;
+  }
+  .contacto .contacto__contenedor .contacto__form .contacto__form__bloque .contacto__form__textarea textarea {
+    resize: none;
+    width: 100%;
+    height: 100%;
+  }
+  .contacto .contacto__contenedor .contacto__form .contacto__boton__contenedor {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 1em;
+  }
+  .contacto .contacto__contenedor .contacto__form .contacto__boton__contenedor .contacto__boton {
+    width: 25%;
+    font-size: 1.2em;
+    background-color: #0c2f3d;
+  }
+  .contacto .contacto__contenedor .contacto__form .contacto__boton__contenedor :hover {
+    background-color: #114358;
+  }
+  .footer {
+    background-color: white;
+    width: 100%;
+    height: 8rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .footer .footer__titulo {
+    margin-bottom: 1.5em;
+    font-weight: lighter;
+    text-transform: uppercase;
+    font-size: 1.5em;
+    text-align: center;
+  }
+  .footer .footer__redes {
+    display: flex;
+    justify-content: space-around;
+  }
+  .footer .footer__redes .footer__redes__item {
+    margin: 0 2em 0 2em;
+  }
+  .footer .footer__redes .footer__redes__item .footer__redes__link {
+    color: grey;
+    text-decoration: none;
+    font-size: 3em;
+  }
+  .footer .footer__redes .footer__redes__item :hover {
+    transform: scale(1.1);
+    transition: all 0.4s;
   }
 }
 
