--- a/styles/style.css
+++ b/styles/style.css
@@ -71,7 +71,7 @@ header {
 
 .principal {
   width: 100%;
-  height: 55rem;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -183,6 +183,7 @@ header {
 .portfolio .portfolio__contenedor__cajas .portfolio__cajaXV:hover .portfolio__linkXV {
   transition: all 0.9s;
   height: 100%;
+  border-radius: 10px;
   text-decoration: none;
   display: flex;
   justify-content: center;
@@ -220,6 +221,7 @@ header {
 .portfolio .portfolio__contenedor__cajas .portfolio__cajaBodas:hover .portfolio__linkBodas {
   transition: all 0.9s;
   height: 100%;
+  border-radius: 10px;
   text-decoration: none;
   display: flex;
   justify-content: center;
@@ -639,6 +641,9 @@ header {
   .principal .carouselContainer .carousel__img3 {
     object-position: 70%;
   }
+  .principal .carouselContainer .carousel .carouselControls .carousel-icon {
+    display: none;
+  }
   .nosotros {
     width: 100%;
     height: 40rem;
@@ -727,6 +732,7 @@ header {
   .portfolio .portfolio__contenedor__cajas .portfolio__cajaXV:hover .portfolio__linkXV {
     transition: all 0.9s;
     height: 100%;
+    border-radius: 10px;
     text-decoration: none;
     display: flex;
     justify-content: center;
@@ -759,6 +765,7 @@ header {
   .portfolio .portfolio__contenedor__cajas .portfolio__cajaBodas:hover .portfolio__linkBodas {
     transition: all 0.9s;
     height: 100%;
+    border-radius: 10px;
     text-decoration: none;
     display: flex;
     justify-content: center;
@@ -782,7 +789,7 @@ header {
   }
   .galeria__contenedor__titulo .galeria__titulo {
     color: #D3ECA7;
-    font-size: 2.5em;
+    font-size: 2.4em;
     font-family: 'Gilda Display', serif;
     text-transform: uppercase;
     letter-spacing: 0.2em;
@@ -1264,8 +1271,8 @@ header {
     width: 90%;
     height: auto;
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(15, 12em);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(14, 12em);
     text-align: center;
     gap: 10px;
   }
@@ -1274,29 +1281,29 @@ header {
     transition: all 0.8s;
   }
   .galeria .contenedorImgXV .imgXV1 {
-    grid-column: 1/2;
+    grid-column: 1/3;
     grid-row: 1/3;
-    background-image: url(../multimedia/images/galeria/XVaños/vertical-1.jpg);
+    background-image: url(../multimedia/images/galeria/XVaños/horizontal-11.jpg);
     background-size: cover;
     background-position-y: -40px;
   }
   .galeria .contenedorImgXV .imgXV2 {
     grid-column: 1/2;
-    grid-row: 3/4;
-    background-image: url(../multimedia/images/galeria/XVaños/horizontal-11.jpg);
+    grid-row: 3/6;
+    background-image: url(../multimedia/images/galeria/XVaños/vertical-1.jpg);
     background-size: cover;
     background-position: bottom;
   }
   .galeria .contenedorImgXV .imgXV3 {
-    grid-column: 1/2;
-    grid-row: 4/7;
+    grid-column: 2/3;
+    grid-row: 3/6;
     background-image: url(../multimedia/images/galeria/XVaños/vertical-2.jpg);
     background-size: cover;
     background-position: center;
   }
   .galeria .contenedorImgXV .imgXV4 {
-    grid-column: 1/2;
-    grid-row: 7/8;
+    grid-column: 1/3;
+    grid-row: 6/8;
     background-image: url(../multimedia/images/galeria/XVaños/horizontal-2.jpg);
     background-size: cover;
   }
@@ -1307,22 +1314,22 @@ header {
     background-size: cover;
   }
   .galeria .contenedorImgXV .imgXV6 {
-    grid-column: 1/2;
-    grid-row: 11/13;
+    grid-column: 2/3;
+    grid-row: 8/11;
     background-image: url(../multimedia/images/galeria/XVaños/vertical-12.jpg);
     background-size: cover;
-    background-position-y: -5em;
+    background-position-y: center;
   }
   .galeria .contenedorImgXV .imgXV7 {
-    grid-column: 1/2;
-    grid-row: 13/14;
+    grid-column: 1/3;
+    grid-row: 11/13;
     background-image: url(../multimedia/images/galeria/XVaños/horizontal-9.jpg);
     background-size: cover;
     background-position: center;
   }
   .galeria .contenedorImgXV .imgXV8 {
-    grid-column: 1/2;
-    grid-row: 14/16;
+    grid-column: 1/3;
+    grid-row: 13/15;
     background-image: url(../multimedia/images/galeria/XVaños/horizontal-1.jpg);
     background-size: cover;
     background-position-y: center;
@@ -1333,7 +1340,7 @@ header {
     height: auto;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(8, 15em);
+    grid-template-rows: repeat(16, 12em);
     text-align: center;
     gap: 10px;
   }
@@ -1343,55 +1350,55 @@ header {
   }
   .galeria .contenedorImgB .imgB1 {
     grid-column: 1/2;
-    grid-row: 1/2;
+    grid-row: 1/3;
     background-image: url(../multimedia/images/galeria/bodas/boda-1.jpg);
     background-size: cover;
     background-position: center;
   }
   .galeria .contenedorImgB .imgB2 {
     grid-column: 1/2;
-    grid-row: 2/3;
+    grid-row: 3/5;
     background-image: url(../multimedia/images/galeria/bodas/boda-2.jpg);
     background-size: cover;
     background-position-y: center;
   }
   .galeria .contenedorImgB .imgB3 {
     grid-column: 1/2;
-    grid-row: 3/4;
+    grid-row: 5/7;
     background-image: url(../multimedia/images/galeria/bodas/boda-3.jpg);
     background-size: cover;
     background-position-y: center;
   }
   .galeria .contenedorImgB .imgB4 {
     grid-column: 1/2;
-    grid-row: 4/5;
+    grid-row: 7/9;
     background-image: url(../multimedia/images/galeria/bodas/boda-4.jpg);
     background-size: cover;
     background-position-y: center;
   }
   .galeria .contenedorImgB .imgB5 {
     grid-column: 1/2;
-    grid-row: 5/6;
+    grid-row: 9/11;
     background-image: url(../multimedia/images/galeria/bodas/boda-5.jpg);
     background-size: cover;
   }
   .galeria .contenedorImgB .imgB6 {
     grid-column: 1/2;
-    grid-row: 6/7;
+    grid-row: 11/13;
     background-image: url(../multimedia/images/galeria/bodas/boda-6.jpg);
     background-size: cover;
     background-position-y: center;
   }
   .galeria .contenedorImgB .imgB7 {
     grid-column: 1/2;
-    grid-row: 7/8;
+    grid-row: 13/15;
     background-image: url(../multimedia/images/galeria/bodas/boda-7.jpg);
     background-size: cover;
     background-position-y: center;
   }
   .galeria .contenedorImgB .imgB8 {
     grid-column: 1/2;
-    grid-row: 8/9;
+    grid-row: 15/17;
     background-image: url(../multimedia/images/galeria/bodas/boda-8.jpg);
     background-size: cover;
   }
@@ -1513,7 +1520,24 @@ header {
 
 @media only screen and (min-width: 850px) and (max-width: 1400px) {
   .principal {
-    height: 35rem;
+    width: 100%;
+    height: 100vh;
+  }
+  .principal .principal__contenedorH1 {
+    width: max-content;
+    height: max-content;
+    position: absolute;
+    z-index: 2;
+    display: flex;
+    align-items: center;
+  }
+  .principal .principal__contenedorH1 .principal__h1 {
+    font-family: 'Gilda Display', serif;
+    text-transform: uppercase;
+    font-size: 7em;
+    letter-spacing: 0.5em;
+    color: #ffebcd;
+    padding: 0 0 0 60px;
   }
   .nosotros {
     height: 35rem;
