--- a/styles/style.scss
+++ b/styles/style.scss
@@ -64,7 +64,7 @@ header{
 // main con sass
 .principal{
     width: 100%;
-    height:55rem;
+    height:100vh;
     display: flex;
     align-items:center;
     justify-content: center;
@@ -170,6 +170,7 @@ header{
                 .portfolio__linkXV{
                     transition: all 0.9s;
                     height: 100%;
+                    border-radius: 10px;
                     text-decoration: none;
                     display: flex;
                     justify-content: center;
@@ -206,6 +207,7 @@ header{
                 .portfolio__linkBodas{
                     transition: all 0.9s;
                     height: 100%;
+                    border-radius: 10px;  
                     text-decoration: none;
                     display: flex;
                     justify-content: center;
@@ -590,6 +592,13 @@ header{
             .carousel__img3{
                 object-position:70%;
             }
+            .carousel{
+                .carouselControls{
+                    .carousel-icon{
+                        display: none;
+                    }
+                }
+            }
         }
     }
     // nosotros con sass
@@ -687,6 +696,7 @@ header{
                     .portfolio__linkXV{
                         transition: all 0.9s;
                         height: 100%;
+                        border-radius: 10px;
                         text-decoration: none;
                         display: flex;
                         justify-content: center;
@@ -723,6 +733,7 @@ header{
                     .portfolio__linkBodas{
                         transition: all 0.9s;
                         height: 100%;
+                        border-radius: 10px;
                         text-decoration: none;
                         display: flex;
                         justify-content: center;
@@ -749,7 +760,7 @@ header{
         align-items: center;
         .galeria__titulo{
             color: $titulos-sec-color;
-            font-size: 2.5em;
+            font-size: 2.4em;
             font-family: 'Gilda Display', serif;
             text-transform: uppercase;
             letter-spacing: 0.2em;
@@ -1020,7 +1031,7 @@ header{
 // tablet
 @media only screen and (min-width: 500px) and (max-width: 850px){
     // main con sass
-  html, body {
+    html, body {
         max-width:100%;
         overflow-x: hidden;
     }
@@ -1252,8 +1263,8 @@ header{
             width: 90%;
             height:auto;
             display: grid;
-            grid-template-columns: repeat(1, 1fr);
-            grid-template-rows: repeat(15, 12em);
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(14, 12em);
             text-align: center;
             gap: 10px;
             :hover{
@@ -1261,29 +1272,29 @@ header{
                 transition: all 0.8s;
             }
             .imgXV1{
-                grid-column: 1/2;
+                grid-column: 1/3;
                 grid-row: 1/3;
-                background-image: url(../multimedia/images/galeria/XVaños/vertical-1.jpg);
+                background-image: url(../multimedia/images/galeria/XVaños/horizontal-11.jpg);
                 background-size: cover;
                 background-position-y: -40px;
             }
             .imgXV2{
                 grid-column: 1/2;
-                grid-row: 3/4;
-                background-image: url(../multimedia/images/galeria/XVaños/horizontal-11.jpg);
+                grid-row: 3/6;
+                background-image: url(../multimedia/images/galeria/XVaños/vertical-1.jpg);
                 background-size: cover;
                 background-position: bottom
             }
             .imgXV3{
-                grid-column: 1/2;
-                grid-row: 4/7;
+                grid-column: 2/3;
+                grid-row: 3/6;
                 background-image: url(../multimedia/images/galeria/XVaños/vertical-2.jpg);
                 background-size: cover;
                 background-position: center
             }
             .imgXV4{
-                grid-column: 1/2;
-                grid-row: 7/8;
+                grid-column: 1/3;
+                grid-row: 6/8;
                 background-image: url(../multimedia/images/galeria/XVaños/horizontal-2.jpg);
                 background-size: cover;
             }
@@ -1294,22 +1305,22 @@ header{
                 background-size: cover;
             }
             .imgXV6{
-                grid-column: 1/2;
-                grid-row: 11/13;
+                grid-column: 2/3;
+                grid-row: 8/11;
                 background-image: url(../multimedia/images/galeria/XVaños/vertical-12.jpg);
                 background-size: cover;
-                background-position-y:-5em;
+                background-position-y:center;
             }
             .imgXV7{
-                grid-column: 1/2;
-                grid-row: 13/14;
+                grid-column: 1/3;
+                grid-row: 11/13;
                 background-image: url(../multimedia/images/galeria/XVaños/horizontal-9.jpg);
                 background-size: cover;
                 background-position: center;
             }
             .imgXV8{
-                grid-column: 1/2;
-                grid-row: 14/16;
+                grid-column: 1/3;
+                grid-row: 13/15;
                 background-image: url(../multimedia/images/galeria/XVaños/horizontal-1.jpg);
                 background-size: cover;
                 background-position-y: center;
@@ -1321,7 +1332,7 @@ header{
             height:auto;
             display: grid;
             grid-template-columns: repeat(1, 1fr);
-            grid-template-rows: repeat(8, 15em);
+            grid-template-rows: repeat(16, 12em);
             text-align: center;
             gap: 10px;
             :hover{
@@ -1330,56 +1341,56 @@ header{
             }
             .imgB1{
                 grid-column: 1/2;
-                grid-row: 1/2;
+                grid-row: 1/3;
                 background-image: url(../multimedia/images/galeria/bodas/boda-1.jpg);
                 background-size: cover;
                 background-position: center;
             }
             .imgB2{
                 grid-column: 1/2;
-                grid-row: 2/3;
+                grid-row: 3/5;
                 background-image: url(../multimedia/images/galeria/bodas/boda-2.jpg);
                 background-size: cover;
                 background-position-y: center;
             }
             .imgB3{
                 grid-column: 1/2;
-                grid-row: 3/4;
+                grid-row: 5/7;
                 background-image: url(../multimedia/images/galeria/bodas/boda-3.jpg);
                 background-size: cover;
                 background-position-y: center;
             }
             .imgB4{
                 grid-column:1/2 ;
-                grid-row:4/5 ;
+                grid-row:7/9 ;
                 background-image: url(../multimedia/images/galeria/bodas/boda-4.jpg);
                 background-size: cover;
                 background-position-y: center
             }
             .imgB5{
                 grid-column:1/2;
-                grid-row: 5/6;
+                grid-row: 9/11;
                 background-image: url(../multimedia/images/galeria/bodas/boda-5.jpg);
                 background-size: cover;
             
             }
             .imgB6{
                 grid-column:1/2;
-                grid-row:6/7;
+                grid-row:11/13;
                 background-image: url(../multimedia/images/galeria/bodas/boda-6.jpg);
                 background-size: cover;
                 background-position-y: center
             }
             .imgB7{
                 grid-column:1/2 ;
-                grid-row: 7/8;
+                grid-row: 13/15;
                 background-image: url(../multimedia/images/galeria/bodas/boda-7.jpg);
                 background-size: cover;
                 background-position-y: center
             }
             .imgB8{
                 grid-column: 1/2;
-                grid-row:8/9;
+                grid-row:15/17;
                 background-image: url(../multimedia/images/galeria/bodas/boda-8.jpg);
                 background-size: cover;
             }
@@ -1505,7 +1516,25 @@ header{
 // notebooks
 @media only screen and (min-width:850px) and (max-width:1400px){
     .principal{
-        height: 35rem;
+        width:100% ;
+        height: 100vh;
+        .principal__contenedorH1{
+            width:max-content;
+            height: max-content;
+            position: absolute;
+            z-index: 2;
+            display: flex;
+            align-items: center;
+            // margin-top: 20em ;
+            .principal__h1{
+                font-family: 'Gilda Display', serif;
+                text-transform: uppercase;
+                font-size: 7em;
+                letter-spacing: 0.5em;
+                color: #ffebcd;
+                padding: 0 0 0 60px ;
+            }
+        }
     }
     .nosotros{
         height: 35rem;
